# dairinin

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  app.py  dependencies.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: conflict.py  notifier.py  parser.py  scheduler.py
db/: email_log.py  hitl_store.py
docker/: mem0.Dockerfile  mem0.env
graph/: orchestrator.py  state.py
mcp_servers/: calendar_mcp.py  gmail_mcp.py  memory_mcp.py  slack_mcp.py
routers/: emails.py  hitl.py  stats.py
scripts/: get_gmail_token.py
services/: email_service.py  hitl_service.py
tests/: test_app.py  test_calendar_mcp.py  test_confidence.py  test_conflict_agent.py  test_email_classifier.py  test_email_log.py  test_event_detector.py  test_gmail_mcp.py  test_hitl_store.py  test_memory_mcp.py  test_notifier_agent.py  test_orchestrator.py  test_parser_agent.py  test_scheduler_agent.py  test_slack_mcp.py
utils/: confidence.py  email_classifier.py  event_detector.py  models.py
